--- a/css_page_18.css
+++ b/css_page_18.css
@@ -25,6 +25,7 @@
             
             h1:hover {  
                 background-color: yellow;
+                color: black;
             }
            
            {  }
