--- a/css_page_18.css
+++ b/css_page_18.css
@@ -15,6 +15,7 @@
             h1 {  
                 background-color: lightblue;
                 margin: 0px;
+                color: green;
             }
             
             p {  
