--- a/wikipedia.css
+++ b/wikipedia.css
@@ -15,7 +15,7 @@ div {
 
 h1 {
     background-color: lightblue;
-    margin: 0%;
+    margin: 0px;
     row-gap: 0px;
     color: orange;
 }
@@ -29,5 +29,5 @@ p {
 }
  h1:hover {
     background-color: yellow;
-     color: black;
+    color: black;
  }
