--- a/wikipedia.css
+++ b/wikipedia.css
@@ -11,7 +11,7 @@ div {
     border-spacing: 0px;
     padding: 0%;
     row-gap: 0px;
-    justify-conetent: center;
+    justify-content: center;
 }
 
 h1 {
