--- a/wikipedia.css
+++ b/wikipedia.css
@@ -1,7 +1,7 @@
 
 div {
-    /* margin: 200px 400px 200px 400px; */
-    width: 60%;
+    margin: 200px 400px 200px 400px;
+    /* width: 60%; */
     border: 5px dashed;
     border-radius: 15px;
     border-top-color: tomato;
