--- a/wikipedia.css
+++ b/wikipedia.css
@@ -1,16 +1,12 @@
-
 div {
     margin: 200px 400px 200px 400px;
-    /* width: 60%; */
     border: 5px dashed;
     border-radius: 15px;
     border-top-color: tomato;
     border-right-color: green;
     border-bottom-color: blue;
     border-left-color: indigo;
-    border-spacing: 0px;
-    padding: 0%;
-    row-gap: 0px;
+    
     
 }
 
@@ -18,7 +14,7 @@ h1 {
     background-color: lightblue;
     margin: 0px;
     row-gap: 0px;
-    color: black;
+    color: green;
 }
 
 p {
