--- a/HTMLMODULE3HomeExercise.css
+++ b/HTMLMODULE3HomeExercise.css
@@ -106,3 +106,9 @@
     border-radius: 3%;
     padding: 2%;
 }
+
+.universeALLcss1Ex5 {
+    display: grid;
+    grid-template-columns: /* 5 */;
+    grid-template-rows: /* 3 */;
+}
