--- a/HTMLMODULE3HomeExercise.css
+++ b/HTMLMODULE3HomeExercise.css
@@ -107,8 +107,83 @@
     padding: 2%;
 }
 
-.universeALLcss1Ex5 {
+
+.universeALLcss1Ex5-container {
+    width: 80%;
+}
+
+.universeALLcss1Ex5-cont {
     display: grid;
-    grid-template-columns: /* 5 */;
-    grid-template-rows: /* 3 */;
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: auto auto auto;
+    background-image: url(universeCSS1ex5.jpeg);
+    width: 80%;
+    height: 400px;
+    align-items: end;
+    justify-content: center;
+    padding: 0px;
+    column-gap: 0px;
+    margin: 0px;
+    column-gap: 0px;
+}
+
+.imgMarsEx5-grid-item {
+    height: 300px;
+    width: 300px;
+  /*  padding: 0px;
+    column-gap: 0px;
+    margin: 0px; */
+    grid-area: 2/4/3/5;
+}
+
+.imgEarthEx5-grid-item {
+    height: 200px;
+    width: 200px;
+    padding: 0px;
+    column-gap: 0px;
+    margin: 0px;
+    grid-area: 2/3/3/4;
+}
+
+.imgJupiterEx5-grid-item {
+    height: 100px;
+    padding: 0px;
+    column-gap: 0px;
+    margin: 0px;
+    grid-area: 2/2/3/3;
+}
+
+.universeEx6 {
+    background-image: url(universeCSS1ex5.jpeg);
+    width: 100%;
+    height: 500px;
+}
+
+.circle1 {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    position: absolute;
+    left: 60%;
+    background-color: white;
+}
+
+.circle2 {
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    position: absolute;
+    left: 45%;
+    background-color: white;
+}
+
+.circle3 {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    position: absolute;
+    left: 40%;
+    background-color: white;
+    vertical-align:sub;
+    
 }
