--- a/HTMLMODULE3HomeExercise.css
+++ b/HTMLMODULE3HomeExercise.css
@@ -124,10 +124,9 @@
     padding: 0px;
     column-gap: 0px;
     margin: 0px;
-    column-gap: 0px;
-}
+    
 
-.imgMarsEx5-grid-item {
+.imgEarthEx5-grid-item {
     height: 300px;
     width: 300px;
   /*  padding: 0px;
