--- a/HTMLMODULE3HomeExercise.css
+++ b/HTMLMODULE3HomeExercise.css
@@ -127,15 +127,15 @@
     
 
 .imgEarthEx5-grid-item {
-    height: 300px;
-    width: 300px;
+    height: 100px;
+    width: 100px;
   /*  padding: 0px;
     column-gap: 0px;
     margin: 0px; */
     grid-area: 2/4/3/5;
 }
 
-.imgEarthEx5-grid-item {
+.imgMarsEx5-grid-item {
     height: 200px;
     width: 200px;
     padding: 0px;
@@ -145,7 +145,7 @@
 }
 
 .imgJupiterEx5-grid-item {
-    height: 100px;
+    height: 50px;
     padding: 0px;
     column-gap: 0px;
     margin: 0px;
